@@ -223,19 +223,18 @@ static gboolean
 should_button_be_active (CongAttributeWrapperRadioButton *attribute_wrapper)
 {
 	gchar *attribute_value = cong_attribute_wrapper_get_attribute_value (CONG_ATTRIBUTE_WRAPPER(attribute_wrapper));
-
+	gboolean retval;
 	if (attribute_value) {
 
 		if (0==strcmp(attribute_value, 
 			      PRIVATE(attribute_wrapper)->attribute_value)) {
-			
-			g_free (attribute_value);
-			return TRUE;			
+			retval = TRUE;
 		} else {
-			g_free (attribute_value);
-			return FALSE;
+			retval = FALSE;
 		}
+		g_free (attribute_value);
 	} else {
-		return (0==strcmp("", PRIVATE(attribute_wrapper)->attribute_value));
+		retval = (0==strcmp("", PRIVATE(attribute_wrapper)->attribute_value));
 	}
+	return retval;
 }
