@@ -1,3 +1,10 @@
+2004-10-17  Douglas Burke  <dburke@cfa.harvard.edu>
+ 
+	* cong-attribute-editor.c, cong-attribute-editor-cdata.c, cong-attribute-editor-lang.c, cong-attribute-editor-nmtoken.c, cong-attribute-wrapper.c, cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-radio-button.c:
+ 
+ 	Fixed assertion failure from g_signal_handler_block/unblock.
+ 	Cleanup of memory leaks.
+ 
 2004-10-17  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 	
 	* cong-dispspec.c : Fix bug with document coverage and
